[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "encode_convert"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = ["pandas", "chardet", "PyYAML"]

[project.scripts]
convert = "encode_convert.__main__:main"
restore = "encode_convert.__main__:main"
encode_convert = "encode_convert.__main__:main"

[tool.setuptools]
package-dir = { "" = "src" }
packages = { find = { where = ["src"] } }
